--- a/mainstyles.css
+++ b/mainstyles.css
@@ -20,3 +20,33 @@ header {
 #todo {
     border: solid medium #ffefba;
 }
+
+ul {
+    margin: 0;
+    padding: 0;
+}
+
+ul li {
+    color: red;
+    margin: 10px;
+    border: solid white;
+    background-color: white;
+}
+
+.addButton {
+    padding: 5px;
+    background: #d9d9d9;
+    color: #555;
+    text-align: center;
+    font-size: 16px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.close {
+    right: 0;
+    top: 0;
+    padding: 12px 16px 12px 16px;
+    cursor: pointer;
+}
+
