--- a/mainstyles.css
+++ b/mainstyles.css
@@ -12,6 +12,15 @@ header {
     margin-bottom: 20px;
 }
 
+h2 {
+    font-size: 72px;
+    background: linear-gradient(to right, #ffefba, #ffffff);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
 .container {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -28,7 +37,7 @@ ul {
 }
 
 ul li {
-    color: red;
+    color: black;
     margin: 10px;
     border: solid white;
     background-color: white;
@@ -44,10 +53,13 @@ ul li {
     transition: 0.3s;
 }
 
+.next {
+    float:right;
+    cursor: pointer;
+}
+
 .close {
-    right: 0;
-    top: 0;
-    padding: 12px 16px 12px 16px;
+    float: right;
     cursor: pointer;
 }
 
